--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -19,11 +19,11 @@ blocks:
           - docker info
           - echo $APP_ENV
 
-  - name: Publish Nginx image
-    dependencies:
-        - Nginx
-    task:
-      jobs:
-        - name: Docker Hub
-          - echo "done"
+#  - name: Publish Nginx image
+#    dependencies:
+#        - Nginx
+#    task:
+#      jobs:
+#        - name: Docker Hub
+#          - echo "done"
 
