--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -15,6 +15,8 @@ blocks:
           - checkout
           - docker info
           - echo $APP_ENV
+          - docker build -t nginx_static:v1 .
+          - docker image
       env_vars:
         - name: APP_ENV
           value: prod
