--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -32,6 +32,7 @@ blocks:
           - docker images
           - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
           - docker tag nginx_static:v1 "$DOCKER_USERNAME"/semaphore
+          - docker push "$DOCKER_USERNAME"/semaphore
           - docker pull "$DOCKER_USERNAME"/semaphore
           - docker images
 
