--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -30,7 +30,7 @@ blocks:
           - docker info
           - docker build -t nginx_static:v1 .
           - docker images
-          - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+          - echo $DOCKER_PASSWORD | docker login --username "$DOCKER_USERNAME" --password-stdin
           - docker tag nginx_static:v1 "$DOCKER_USERNAME"/semaphore
           - docker push "$DOCKER_USERNAME"/semaphore
           - docker pull "$DOCKER_USERNAME"/semaphore
